<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/day"
        android:layout_width="143dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="13dp"
        android:text="@string/date" />

    <TextView
        android:id="@+id/tot"
        android:layout_width="179dp"
        android:layout_height="44dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/day"
        android:layout_marginTop="80dp"
        android:text="@string/t" />

    <TextView
        android:id="@+id/date"
        android:layout_width="170dp"
        android:layout_height="44dp"
        android:layout_alignBottom="@+id/day"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="27dp"
        android:text="@string/N" />

    <TextView
        android:id="@+id/total"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:layout_alignEnd="@+id/date"
        android:layout_alignTop="@+id/tot"
        android:text="@string/N" />
</RelativeLayout>