<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:hint="@string/day"
                    android:text="@string/N" />

            </RelativeLayout>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="355dp"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/bath"
                    android:layout_width="236dp"
                    android:layout_height="56dp"
                    android:text="@string/body" />

                <TextView
                    android:id="@+id/b"
                    android:layout_width="73dp"
                    android:layout_height="55dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/init" />
            </RelativeLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/Laundry"
                    android:layout_width="236dp"
                    android:layout_height="56dp"
                    android:text="@string/laundry"
                    tools:text="@string/laundry" />

                <TextView
                    android:id="@+id/l"
                    android:layout_width="73dp"
                    android:layout_height="55dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/init" />
            </RelativeLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/Clean"
                    android:layout_width="236dp"
                    android:layout_height="56dp"
                    android:text="@string/clean" />

                <TextView
                    android:id="@+id/c"
                    android:layout_width="73dp"
                    android:layout_height="55dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/init" />
            </RelativeLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/dish"
                    android:layout_width="236dp"
                    android:layout_height="56dp"
                    android:text="@string/dish" />

                <TextView
                    android:id="@+id/d"
                    android:layout_width="73dp"
                    android:layout_height="55dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/init" />
            </RelativeLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/Toilet"
                    android:layout_width="236dp"
                    android:layout_height="56dp"
                    android:text="@string/toilet" />

                <TextView
                    android:id="@+id/t"
                    android:layout_width="73dp"
                    android:layout_height="55dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/init" />
            </RelativeLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/Drink"
                    android:layout_width="236dp"
                    android:layout_height="56dp"
                    android:text="@string/drink" />

                <TextView
                    android:id="@+id/D"
                    android:layout_width="73dp"
                    android:layout_height="55dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/init" />
            </RelativeLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/hyg"
                    android:layout_width="236dp"
                    android:layout_height="56dp"
                    android:text="@string/hy" />

                <TextView
                    android:id="@+id/h"
                    android:layout_width="73dp"
                    android:layout_height="55dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/init" />
            </RelativeLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/Cook"
                    android:layout_width="236dp"
                    android:layout_height="56dp"
                    android:text="@string/cook" />

                <TextView
                    android:id="@+id/C"
                    android:layout_width="73dp"
                    android:layout_height="55dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/init" />
            </RelativeLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/Total"
                    android:layout_width="236dp"
                    android:layout_height="56dp"
                    android:text="@string/total" />

                <TextView
                    android:id="@+id/T"
                    android:layout_width="73dp"
                    android:layout_height="55dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/init" />
            </RelativeLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <Button
                    android:id="@+id/back"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/back"
                    android:onClick="back" />

                <Button
                    android:id="@+id/overView"
                    android:layout_width="115dp"
                    android:layout_height="38dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="59dp"
                    android:background="@color/colorPrimary"
                    android:onClick="home"
                    android:text="@string/ov" />

                <Button
                    android:id="@+id/calc"
                    android:layout_width="115dp"
                    android:layout_height="38dp"
                    android:layout_alignEnd="@+id/forward"
                    android:layout_alignTop="@+id/overView"
                    android:background="@color/colorPrimaryDark"
                    android:onClick="CALC"
                    android:text="@string/calc" />

                <Button
                    android:id="@+id/forward"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="22dp"
                    android:layout_marginRight="22dp"
                    android:background="@drawable/forwad"
                    android:onClick="next" />
            </RelativeLayout>
        </TableRow>
    </TableLayout>
</ScrollView>